--- a/Zdebski Tomasz inf2B/WebOrientation-master/index.html
+++ b/Zdebski Tomasz inf2B/WebOrientation-master/index.html
@@ -9,6 +9,18 @@
 </head>
 <body>
     <div class="container">
+        <div class="win" style="left:600px;top:300px;">
+        </div>
+        <div class="hole" style="left:100px;top:100px;">
+        </div>
+        <div class="hole" style="left:300px;top:300px;">
+        </div>
+        <div class="hole" style="left:600px;top:600px;">
+        </div>
+        <div class="hole" style="left:500px;top:300px;">
+        </div>
+        <div class="hole" style="left:400px;top:200px;">
+        </div>
         <div class="ball">
         </div>
     </div>
