--- a/Zdebski Tomasz inf2B/NotesJs-master/index.html
+++ b/Zdebski Tomasz inf2B/NotesJs-master/index.html
@@ -8,7 +8,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <h1>Pinned</h1>
+    <div class="pinned">
+    </div>
+    <h1>Rest</h1>
+    <div class="notes">
+
+    </div>
+
+    <div id="addBtn" onclick="createNote()">+</div>
     <script src="script.js"></script>
 </body>
 </html>
