--- a/Zdebski Tomasz inf2B/CatchMe-master/index.html
+++ b/Zdebski Tomasz inf2B/CatchMe-master/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <title>CatchMeIfYouCan</title>
 </head>
 <body>
+    <div id="mapDiv"></div>
     <script src="script.js"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDA2TJ4hFGusgE8Bk8W3UuHcOr2p5CxKbI&callback=initMapCallback"
+    type="text/javascript"></script>
 </body>
 </html>
