--- a/Zdebski Tomasz inf2B/CatchMe-master/index.html
+++ b/Zdebski Tomasz inf2B/CatchMe-master/index.html
@@ -10,7 +10,7 @@
 <body>
     <div id="mapDiv"></div>
     <script src="script.js"></script>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDA2TJ4hFGusgE8Bk8W3UuHcOr2p5CxKbI&callback=initMapCallback"
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMapCallback"
     type="text/javascript"></script>
 </body>
 </html>
